--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>2.0.0-alpha3</version>
     </dependency>
     <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-core</artifactId>
+      <version>3.4.9</version>
+    </dependency>
+    <dependency>
       <groupId>io.projectreactor.netty</groupId>
       <artifactId>reactor-netty-http</artifactId>
       <version>1.0.10</version>
