--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.9</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>2.2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
