--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>dotenv-java</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webflux</artifactId>
+      <version>5.3.9</version>
+    </dependency>
   </dependencies>
 
   <build>
